# ndr_api

./: environment.yml  pyproject.toml
src/ndr_api/: ndr_access.py
