[tool.poetry]
name = "ndr_api"
version = "0.1.0"
description = ""
authors = ["giorgos papageorgiou <gpap.gpap@gmail.com>"]
readme = "README.md"
packages = [{ include = "ndr_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24"
pandas = "^2.0"
lasio = "^0.31"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
